apps/php/deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: php-deployment
spec:
  replicas: 4
  template:
    metadata:
      labels:
        app: php
    spec:
      containers:
        - image: php:7-apache
          imagePullPolicy: Always
          name: php-container
          ports:
            - containerPort: 80
          volumeMounts:
            - name: code
              mountPath: /var/www/html
      volumes:
      - name: code
        hostPath:
          path: /code/test1
