apps/php/service.yml
apiVersion: v1
kind: Service
metadata:
 name: php-svc
spec:
 ports:
    -  port: 8080
       protocol: TCP
       targetPort: 80
 selector:
   app: php
 type: NodePort
