apps/php/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: php-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "php-svc"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: php-svc
          servicePort: 8080
